--- a/win32/ariominer/ariominer.vcxproj
+++ b/win32/ariominer/ariominer.vcxproj
@@ -134,13 +134,14 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>STACK_LINE_READER_BUFFER_SIZE=1024;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>$(INTELOCLSDKROOT)include;../;../dlfcn;../../hash/cpu/cpu_features/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>OpenCL.lib;psapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>OpenCL.lib;psapi.lib;ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(INTELOCLSDKROOT)lib/x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalOptions> /NODEFAULTLIB:libcpmt.lib %(AdditionalOptions)</AdditionalOptions>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug_AMD|x64'">
@@ -151,13 +152,14 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>STACK_LINE_READER_BUFFER_SIZE=1024;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>$(INTELOCLSDKROOT)include;../;../dlfcn;../../hash/cpu/cpu_features/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>OpenCL.lib;psapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>OpenCL.lib;psapi.lib;ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(INTELOCLSDKROOT)lib/x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalOptions> /NODEFAULTLIB:libcpmt.lib %(AdditionalOptions)</AdditionalOptions>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug_NVIDIA|x64'">
@@ -173,8 +175,9 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>OpenCL.lib;psapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>OpenCL.lib;psapi.lib;ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v9.2\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalOptions> /NODEFAULTLIB:libcpmt.lib %(AdditionalOptions)</AdditionalOptions>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release_Intel|x64'">
@@ -194,7 +197,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>OpenCL.lib;psapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>OpenCL.lib;psapi.lib;ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(INTELOCLSDKROOT)lib/x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -215,7 +218,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>OpenCL.lib;psapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>OpenCL.lib;psapi.lib;ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(INTELOCLSDKROOT)lib/x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -238,7 +241,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>OpenCL.lib;psapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>OpenCL.lib;psapi.lib;ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v9.2\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -246,6 +249,8 @@
     <ClCompile Include="..\..\app\arguments.cpp" />
     <ClCompile Include="..\..\app\main.cpp" />
     <ClCompile Include="..\..\common\common.cpp" />
+    <ClCompile Include="..\..\crypt\base64.cpp" />
+    <ClCompile Include="..\..\crypt\random_generator.cpp" />
     <ClCompile Include="..\..\crypt\sha512.cpp" />
     <ClCompile Include="..\..\hash\argon2\argon2.cpp" />
     <ClCompile Include="..\..\hash\argon2\argon2profile_1_1_524288.c" />
@@ -269,7 +274,7 @@
     <ClCompile Include="..\..\hash\hasher.cpp" />
     <ClCompile Include="..\..\http\client.cpp" />
     <ClCompile Include="..\..\http\http.cpp" />
-    <ClCompile Include="..\..\http\mongoose\mongoose.c" />
+    <ClCompile Include="..\..\http\http_parser\http_parser.c" />
     <ClCompile Include="..\..\http\server.cpp" />
     <ClCompile Include="..\..\miner\miner.cpp" />
     <ClCompile Include="..\..\miner\mini-gmp\mini-gmp.c" />
@@ -280,6 +285,8 @@
   <ItemGroup>
     <ClInclude Include="..\..\app\arguments.h" />
     <ClInclude Include="..\..\common\common.h" />
+    <ClInclude Include="..\..\crypt\base64.h" />
+    <ClInclude Include="..\..\crypt\random_generator.h" />
     <ClInclude Include="..\..\crypt\sha512.h" />
     <ClInclude Include="..\..\hash\argon2\argon2.h" />
     <ClInclude Include="..\..\hash\argon2\blake2\blake2-impl.h" />
@@ -304,7 +311,7 @@
     <ClInclude Include="..\..\hash\hasher.h" />
     <ClInclude Include="..\..\http\client.h" />
     <ClInclude Include="..\..\http\http.h" />
-    <ClInclude Include="..\..\http\mongoose\mongoose.h" />
+    <ClInclude Include="..\..\http\http_parser\http_parser.h" />
     <ClInclude Include="..\..\http\server.h" />
     <ClInclude Include="..\..\http\simplejson\json.h" />
     <ClInclude Include="..\..\miner\miner.h" />
