--- a/win32/ariominer/ariominer.vcxproj
+++ b/win32/ariominer/ariominer.vcxproj
@@ -248,6 +248,7 @@
   <ItemGroup>
     <ClCompile Include="..\..\app\arguments.cpp" />
     <ClCompile Include="..\..\app\main.cpp" />
+    <ClCompile Include="..\..\autotune\autotune.cpp" />
     <ClCompile Include="..\..\common\common.cpp" />
     <ClCompile Include="..\..\crypt\base64.cpp" />
     <ClCompile Include="..\..\crypt\random_generator.cpp" />
@@ -284,6 +285,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\app\arguments.h" />
+    <ClInclude Include="..\..\autotune\autotune.h" />
     <ClInclude Include="..\..\common\common.h" />
     <ClInclude Include="..\..\crypt\base64.h" />
     <ClInclude Include="..\..\crypt\random_generator.h" />
